--- a/src/app/component/Home/home.css
+++ b/src/app/component/Home/home.css
@@ -1,5 +1,8 @@
 .homebody{
-    margin: 10px;
+    width: 700px;
+    margin: 0px auto;
+    margin-top: 20px;
+    background-color: white;
 }
 
 .homefoot{
